src/pages/MessagePostPage/components/MessagePostForm.module.scss
.container {
  max-width: 720px;
  margin-bottom: 60px;
}

.form {
  display: flex;
  flex-direction: column;
  gap: 50px;
}

* {
  font-size: 16px;
  color: var(--grey-500);

  h2 {
    margin-bottom: 12px;
    font-weight: 700;
    font-size: 24px;
    color: var(--grey-900);
    cursor: default;
  }

  input {
    width: 100%;
    padding: 12px 16px;
    border-radius: 8px;
    border: 1px solid var(--grey-300);

    &:focus {
      outline: none;
    }

    &:-webkit-autofill {
      -webkit-box-shadow: 0 0 0 500px var(--white) inset !important;
    }
  }

  input[type="radio"] {
    display: none;
  }

  .errorMessage {
    position: absolute;
    color: var(--error);
    padding: 10px;
    cursor: default;
  }
}

/* Mobile */
@media (max-width: 767px) {
  .container {
    max-width: 320px;
  }
}

/* Tablet */
@media (max-width: 1023px) {
}

